@@ -1,5 +1,5 @@
 Package: JavaGD
-Version: 0.5-0
+Version: 0.5-3
 Title: Java Graphics Device
 Author: Simon Urbanek <Simon.Urbanek@R-project.org>
 Maintainer: Simon Urbanek <Simon.Urbanek@R-project.org>
