@@ -1,0 +1,6 @@
+LIBRARY     JVM.DLL
+
+EXPORTS
+    JNI_CreateJavaVM
+    JNI_GetCreatedJavaVMs
+    JNI_GetDefaultJavaVMInitArgs
