@@ -14,6 +14,8 @@
 	javagd.usesymbolfont property which can be set to true/false
 	(the default is false on Windows and true elsewhere).
 
+    o	add support for multi-arch builds and Win64
+
 0.5-2	2008-10-17
     o	adapt to changes in R-devel (2.9.0-to-be)
 
